Layout complete (maybe)

--- a/index.html
+++ b/index.html
@@ -93,6 +93,157 @@
                     <li>Прозрачность заказа — уведомление о готовности, оплата любыми способами.</li>
                 </ul>
                 <p class="has-text-justified mb-3">У нас амбициозные планы! Развивая франчайзинговую сеть, мы хотим увеличить базу наших партнеров, облегчить им цикл работ с полиграфической продукцией, а клиентам оперативно и качественно предоставлять заказы! Мы предлагаем франчайзи запустить собственный агрегатор заказов «Printing» и зарабатывать в два раза больше, чем обычные типографии!</p>
+                <p class="has-text-centered mb-3"><b>«Printing» vs Классическая типография</b></p>
+                <table class="table is-striped is-hoverable is-fullwidth">
+                    <tr class="has-background-link-light">
+                        <th></th><th class="has-text-centered">«Printing»</th><th class="has-text-centered">Типография</th>
+                    </tr>
+                    <tr>
+                        <td>Время обработки одного заказа менеджером</td><td class="has-text-centered">15 минут</td><td class="has-text-centered">1,5 часа</td>
+                    </tr>
+                    <tr>
+                        <td>Количество заказов в день</td><td class="has-text-centered">9-10</td><td class="has-text-centered">4-5</td>
+                    </tr>
+                    <tr>
+                        <td>Количество заказов в месяц</td><td class="has-text-centered">300+</td><td class="has-text-centered">150</td>
+                    </tr>
+                </table>
+
+                <p class="has-text-centered"><img class="" src="img/photo-2.jpg" alt="«Printing» — франшиза рекламного агентства" title="«Printing» — франшиза рекламного агентства"></p>
+
+                <p class="has-text-justified mb-3"><b>Кого мы хотим видеть в нашей дружной команде?</b></p>
+                <ol>                    
+                    <li>Владельцы действующих фотосалонов и салонов по изготовлению печатей.</li>
+                    <li>Дизайнеры, которые хотят выйти на рынок рекламных услуг и новый уровень дохода.</li>
+                    <li>Предприниматели, имеющие печатное оборудование, но не имеющие знаний и опыта для его эффективного использования.</li>
+                    <li>Новички, которые хотят открыть собственное дело.</li>
+                </ol>
+                <p class="has-text-justified mb-3">Таким образом, франшиза позволит запустить бизнес «под ключ» с нуля или масштабировать текущую деятельность и зарабатывать дополнительно на существующей клиентской базе.</p>
+
+                <p class="has-text-centered mb-3"><b>Работать с «Printing» выгодно всем:</b></p>
+                <div class="columns">
+                    <div class="column is-6">
+                        <p class="has-text-centered mb-3"><b>Франчайзи:</b></p>
+                        <ul>                    
+                            <li>Низкий порог входа на рынок.</li>
+                            <li>Не нужно придумывать и создавать новый продукт/услугу.</li>
+                            <li>Проверенная бизнес-модель на собственном партнерском опыте.</li>
+                            <li>Минимальные риски.</li>
+                            <li>Простота управления бизнесом.</li>
+                        </ul>
+                    </div>
+                    <div class="column is-6">
+                        <p class="has-text-centered mb-3"><b>Заказчикам:</b></p>
+                        <ul>                    
+                            <li>Онлайн-заказ в любое время суток.</li>
+                            <li>Оперативная обработка заказа.</li>
+                            <li>Доступные цены.</li>
+                            <li>Оплата любым удобным способом.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <p class="has-text-centered"><img class="" src="img/photo-3.jpg" alt="«Printing» — франшиза рекламного агентства" title="«Printing» — франшиза рекламного агентства"></p>
+
+                <div class="subtitle is-size-3">Как вы будете зарабатывать</div>
+                <p class="has-text-centered mb-3"><b>Зарабатывать вместе с «Printing» сможет каждый!</b></p>
+                <p class="has-text-justified mb-3">Наша цифровая платформа и поддержка профессиональной команды помогут выйти вам на плановый оборот 1&nbsp;000&nbsp;000 рублей и чистую прибыль от 150 000 рублей в месяц. Для запуска франшизы вам понадобится ИП или ООО. Начать работу на первом этапе возможно из дома и по мере развития переехать в небольшой офис.</p>
+                <p class="has-text-justified mb-3"><b>Мы подключим вас к сервису,</b> настроим сайт с калькулятором и запустим франшизу в работу за 1 неделю.</p>
+                <p class="has-text-justified mb-3"><b>Обеспечим</b> обучение и полное погружение в специфику полиграфического бизнеса.</p>
+                <p class="has-text-justified mb-3"><b>Предоставим команду поддержки,</b> чтобы вам было просто начать работать и уверенно масштабировать бизнес.</p>
+
+                <p class="has-text-justified mb-3"><b>На чем вы будете зарабатывать:</b></p>
+                <ul>
+                    <li>Визитки.</li>
+                    <li>Листовки.</li>
+                    <li>Наклейки.</li>
+                    <li>Буклеты.</li>
+                    <li>Квартальные календари.</li>
+                    <li>Настольные и карманные календари.</li>
+                    <li>Грамоты и сертификаты.</li>
+                </ul>
+                <p class="has-text-justified mb-3">Маржинальность составляет 25-30% для работы франчайзи по модели рекламного агентства, 60-70% для работы с собственным производством.</p>
+
+                <p class="has-text-justified mb-3"><b>Как мы работаем с франчайзи:</b></p>
+                <ul>
+                    <li>Заключаем договор коммерческой концессии.</li>
+                    <li>Подключаем к платформе «Printing».</li>
+                    <li>Размещаем и настраиваем калькулятор заказов.</li>
+                    <li>Погружаем в бизнес, обучаем продажам.</li>
+                    <li>Предоставляем доступ ко всем материалам и обучению.</li>
+                    <li>Размещаем партнера на федеральном сайте компании «Printing».</li>
+                    <li>Поддерживаем проект в режиме консультаций и помогаем в привлечении клиентов.</li>
+                </ul>
+                <p class="has-text-justified mb-3">Вам не нужно думать, где брать заказы! Мы протестировали разные каналы маркетинга и научились привлекать заявки. С помощью нашей поддержки и инструкций франшиза начнет приносить вам прибыль уже с первых месяцев работы.</p>
+
+                <p class="has-text-centered"><img class="" src="img/photo-4.jpg" alt="«Printing» — франшиза рекламного агентства" title="«Printing» — франшиза рекламного агентства"></p>
+
+                <div class="subtitle is-size-3">Преимущества франшизы</div>
+                <ul>                    
+                    <li>Зарегистрированная торговая марка.</li>
+                    <li>Широкая ЦА проекта: любой бизнес, заказывающий полиграфическую продукцию.</li>
+                    <li>Быстрый старт. Мы поможем запустить франшизу за 1 неделю.</li>
+                    <li>Возможность начать работать из дома с минимальными вложениями.</li>
+                    <li>Полностью прозрачная схема работы.</li>
+                    <li>Отсутствие затрат на дорогой офис и большой штат сотрудников.</li>
+                    <li>Полноценное обучение специфике бизнеса и продажам.</li>
+                    <li>Служба технической поддержки 24/7.</li>
+                    <li>Полное сопровождение в открытии франшизы.</li>
+                </ul>
+                <div class="box investment">
+                    <div class="subtitle is-size-4">Инвестиции для открытия бизнеса</div>
+                    <p class="has-text-justified mb-3"><b>Стартовые инвестиции:</b> от 300 000 рублей (без учета паушального взноса)</p>
+                    <p class="has-text-justified mb-3"><b>Срок окупаемости:</b> от 12 месяцев</p>
+                    <p class="has-text-justified mb-3"><b>Оборот в месяц:</b> 1 000 000 рублей</p>
+                    <p class="has-text-justified mb-3"><b>Роялти:</b> 10 000 рублей</p>
+                    <p class="has-text-justified mb-3"><b>Паушальный взнос:</b> от 350 000 рублей</p>
+
+                    <p class="has-text-justified mb-3"><b>Паушальный взнос включает:</b></p>
+                    <ul>
+                        <li>Подключение к цифровой платформе.</li>
+                        <li>Создание сайта с калькулятором заказов.</li>
+                        <li>Право пользования брендом «Printing».</li>
+                        <li>Бизнес-план, финансовая модель развития проекта.</li>
+                        <li>Настроенные бизнес-процессы, прописанные регламенты работы.</li>
+                        <li>Обучение бизнесу, продажам, работе с программой.</li>
+                        <li>Полный набор инструкций и обучающих материалов.</li>
+                        <li>Передача заявок с федерального сайта в регион франчайзи.</li>
+                        <li>Техническая поддержка платформы.</li>
+                        <li>Маркетинговая поддержка.</li>
+                    </ul>
+                </div>
+
+                <div class="box has-background-light ">
+                    <div class="subtitle is-size-4">Отзывы моих франчайзи</div>
+                </div>
+
+                <div class="subtitle is-size-3">Пакет франшизы</div>
+                <p class="has-text-justified mb-3">Стартовый пакет франшизы включает всё, чтобы начать работать и иметь стабильный поток клиентов: обучение, инструкции и маркетинговую поддержку от головного офиса.</p>
+                <ol>
+                    <li>Рекламное агентство — франчайзи продает полиграфию, производство на аутсосрсинге.</li>
+                    <li>Производство — франчайзи продает полиграфию и производит ее на собственном оборудовании.</li>
+                </ol>
+
+                <div class="box has-background-light ">
+                    <div class="subtitle has-text-centered is-size-4">Фото</div>
+                    <div class="subtitle has-text-centered is-size-4 mt-6">Видео</div>
+                </div>
+
+                <div class="box investment">
+                    <div class="subtitle is-size-4">Расчет прибыли</div>
+                    <p class="has-text-justified mb-3"><b>Средний чек:</b> от 3 500 до 4 000 рублей</p>
+                    <p class="has-text-justified mb-3"><b>Средний оборот в месяц:</b> 1 000 000 рублей</p>
+                    <p class="has-text-justified mb-3"><b>Затраты в месяц:</b> 850 000 рублей</p>
+                    <p class="has-text-justified mb-3"><b>Средняя прибыль в месяц:</b> 150 000 рублей</p>
+                    <p class="has-text-justified mb-3"><b>Окупаемость:</b> от 4 месяцев</p>
+                </div>
+
+                <div class="box has-background-light ">
+                    <div class="subtitle has-text-centered is-size-3">Отзывы о франшизе «Printing»</div>
+                    <div class="has-text-centered">Поделитесь своим мнением о франшизе!</div>
+                    <div class="has-text-centered mt-4"><button class="button">Оставить отзыв</button></div>
+                </div>
+
             </div>
             <div class="column is-3">
                 <div class="box in-digits p-2">
@@ -117,6 +268,38 @@
                         <div>Средний оборот<br>в месяц:</div>
                         <div class="has-text-link-dark has-text-weight-bold is-size-5">от 1&nbsp;000&nbsp;000&nbsp;₽</div>
                     </div>
+                </div>
+                <div class="box has-background-light">
+                    <div class="subtitle is-size-4">Содержание страницы</div>
+                    <div class="mt-2"><a class="has-text-black" href="">О компании и бизнесе</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="">Описание франшизы</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Как вы будете зарабатывать?</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Преимущества франшизы</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Стоимость франшизы</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Видеоотзывы</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Пакет франшизы</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Фото и видео</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Расчет прибыли</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="">Отзывы франчайзи</a></div>
+                    <div class="mt-2"><a class="has-text-black" href="">Подробный бизнес-план</a></div>
+                </div>
+
+                <div class="box">
+                    <div class="media mb-4">
+                        <div class="media-left">
+                          <figure class="image is-64x64">
+                            <img src="img/ars.png" alt="Арсений Девдариани" title="Арсений Девдариани">
+                          </figure>
+                        </div>
+                        <div class="media-content">
+                          <p class="subtitle is-6">Официальный представитель<br>франшизы</p>
+                          <p class="title is-6 has-text-weight-bold">Арсений Девдариани</p>
+                        </div>
+                    </div>
+                    <button class="button is-primary mt-1 is-fullwidth">
+                        <img src="img/envelope.svg" class="mr-2">
+                        Отправить заявку
+                    </button>
                 </div>
             </div>
         </div>
