Set right block as sticky.

--- a/index.html
+++ b/index.html
@@ -269,37 +269,39 @@
                         <div class="has-text-link-dark has-text-weight-bold is-size-5">от 1&nbsp;000&nbsp;000&nbsp;₽</div>
                     </div>
                 </div>
-                <div class="box has-background-light">
-                    <div class="subtitle is-size-4">Содержание страницы</div>
-                    <div class="mt-2"><a class="has-text-black" href="">О компании и бизнесе</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="">Описание франшизы</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Как вы будете зарабатывать?</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Преимущества франшизы</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Стоимость франшизы</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Видеоотзывы</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Пакет франшизы</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Фото и видео</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="" class="ml-2">- Расчет прибыли</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="">Отзывы франчайзи</a></div>
-                    <div class="mt-2"><a class="has-text-black" href="">Подробный бизнес-план</a></div>
-                </div>
-
-                <div class="box">
-                    <div class="media mb-4">
-                        <div class="media-left">
-                          <figure class="image is-64x64">
-                            <img src="img/ars.png" alt="Арсений Девдариани" title="Арсений Девдариани">
-                          </figure>
-                        </div>
-                        <div class="media-content">
-                          <p class="subtitle is-6">Официальный представитель<br>франшизы</p>
-                          <p class="title is-6 has-text-weight-bold">Арсений Девдариани</p>
-                        </div>
+                <div class="is-sticky">
+                    <div class="box has-background-light">
+                        <div class="subtitle is-size-4">Содержание страницы</div>
+                        <div class="mt-2"><a class="has-text-black" href="">О компании и бизнесе</a></div>
+                        <div class="mt-2"><a class="has-text-black" href="">Описание франшизы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black" href="">- Как вы будете зарабатывать?</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black" href="">- Преимущества франшизы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black" href="">- Стоимость франшизы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black" href="">- Видеоотзывы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black" href="">- Пакет франшизы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black" href="">- Фото и видео</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black" href="">- Расчет прибыли</a></div>
+                        <div class="mt-2"><a class="has-text-black" href="">Отзывы франчайзи</a></div>
+                        <div class="mt-2"><a class="has-text-black" href="">Подробный бизнес-план</a></div>
                     </div>
-                    <button class="button is-primary mt-1 is-fullwidth">
-                        <img src="img/envelope.svg" class="mr-2">
-                        Отправить заявку
-                    </button>
+
+                    <div class="box">
+                        <div class="media mb-4">
+                            <div class="media-left">
+                            <figure class="image is-64x64">
+                                <img src="img/ars.png" alt="Арсений Девдариани" title="Арсений Девдариани">
+                            </figure>
+                            </div>
+                            <div class="media-content">
+                            <p class="subtitle is-6">Официальный представитель<br>франшизы</p>
+                            <p class="title is-6 has-text-weight-bold">Арсений Девдариани</p>
+                            </div>
+                        </div>
+                        <button class="button is-primary mt-1 is-fullwidth">
+                            <img src="img/envelope.svg" class="mr-2">
+                            Отправить заявку
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
