--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Франшиза рекламного агентства «Printing»: цена, описание, отзывы</title>
     <link rel="stylesheet" href="css/bulma.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <div class="container px-2">
@@ -14,8 +15,7 @@
         <nav class="navbar is-navbar-sticky has-background-light">
             <div class="navbar-brand ml-2">
                 <a class="navbar-item" href="https://printing.ru/static/franchise/index.html">
-                    <img src="img/logo.svg" alt="Printing" height="228">
-                    <span class="navbar-title is-size-3 has-text-weight-semibold ml-3 is-uppercase">франшиза рекламного агентства</span>    
+                    <span class="navbar-title is-size-3 has-text-weight-semibold ml-3 is-uppercase">«Printing» – франшиза рекламного агентства</span>    
                 </a>                
             </div>
         </nav>
@@ -55,7 +55,7 @@
                         <img src="img/call_icon.svg" class="mr-2">
                         Заказать звонок
                     </button>
-                    <button class="button is-primary mt-1 is-fullwidth">
+                    <button class="button is-primary mt-1 is-fullwidth send-order">
                         <img src="img/envelope.svg" class="mr-2">
                         Отправить заявку
                     </button>
@@ -65,7 +65,7 @@
 
         <div class="columns mt-4">
             <div class="column content">
-                <div class="subtitle is-size-3"><a name="01"></a>О компании и бизнесе</div>
+                <div class="subtitle is-size-3"><a class="anchor-title" name="01"></a>О компании и бизнесе</div>
                 <p class="has-text-justified mb-3"><b>«Printing»</b> — это эксклюзивная SAAS-система для управления полиграфическим бизнесом, которая включает несколько модулей: калькулятор заказов, CRM-систему, управление производством, уникальную партнерскую программу и интернет-магазин полиграфии (web-to-print).</p>
                 <p class="has-text-justified mb-3">Система полностью автоматизирует работу рекламного агентства, позволяет войти в этот бизнес тем, кто не имеет достаточно опыта работы в полиграфии, помогает агентствам получать заказы, а клиентам оперативно заказывать полиграфию: от визиток, листовок, буклетов до календарей любого формата и сложности. Цифровая платформа «Printing» уникальна по функционалу и идеально подходит тем, кто хочет работать в полиграфическом бизнесе.</p>
                 <p class="has-text-justified mb-3">Несмотря на современные реалии, спрос на деловую и рекламную полиграфию не падает. Любому бизнесу и частным лицам приходится постоянно заказывать полиграфическую продукцию, и платформа «Printing» помогает найти их и обеспечить полиграфией!</p>
@@ -73,7 +73,7 @@
                 <p class="has-text-justified mb-3">Разработчики «Printing» полностью автоматизировали все процессы работы рекламного агентства: от общения с клиентами до производства. Максимально функциональный калькулятор заказов и система расчета заказов удобны в использовании, поэтому все больше рекламных агентств присоединяются к нам. <b>Сегодня к «Printing» подключены 200 партнеров и 2 собственных полиграфических производства.</b></p>
                 <p class="has-text-centered"><img class="" src="img/photo-1.jpg" alt="«Printing» — франшиза рекламного агентства" title="«Printing» — франшиза рекламного агентства"></p>
                 
-                <div class="subtitle is-size-3 mt-6"><a name="02"></a>Описание франшизы</div>
+                <div class="subtitle is-size-3 mt-6"><a class="anchor-title" name="02"></a>Описание франшизы</div>
                 <p class="has-text-justified mb-3"><b>Франшиза агрегатора заказов «Printing» не имеет аналогов на российском рынке.</b></p>
                 <ul>
                     <li>30 лет на рынке полиграфии.</li>
@@ -145,7 +145,7 @@
 
                 <p class="has-text-centered"><img class="" src="img/photo-3.jpg" alt="«Printing» — франшиза рекламного агентства" title="«Printing» — франшиза рекламного агентства"></p>
 
-                <div class="subtitle is-size-3"><a name="03"></a>Как вы будете зарабатывать</div>
+                <div class="subtitle is-size-3"><a class="anchor-title" name="03"></a>Как вы будете зарабатывать</div>
                 <p class="has-text-centered mb-3"><b>Зарабатывать вместе с «Printing» сможет каждый!</b></p>
                 <p class="has-text-justified mb-3">Наша цифровая платформа и поддержка профессиональной команды помогут выйти вам на плановый оборот 1&nbsp;000&nbsp;000 рублей и чистую прибыль от 150 000 рублей в месяц. Для запуска франшизы вам понадобится ИП или ООО. Начать работу на первом этапе возможно из дома и по мере развития переехать в небольшой офис.</p>
                 <p class="has-text-justified mb-3"><b>Мы подключим вас к сервису,</b> настроим сайт с калькулятором и запустим франшизу в работу за 1 неделю.</p>
@@ -178,7 +178,7 @@
 
                 <p class="has-text-centered"><img class="" src="img/photo-4.jpg" alt="«Printing» — франшиза рекламного агентства" title="«Printing» — франшиза рекламного агентства"></p>
 
-                <div class="subtitle is-size-3"><a name="04"></a>Преимущества франшизы</div>
+                <div class="subtitle is-size-3"><a class="anchor-title" name="04"></a>Преимущества франшизы</div>
                 <ul>                    
                     <li>Зарегистрированная торговая марка.</li>
                     <li>Широкая ЦА проекта: любой бизнес, заказывающий полиграфическую продукцию.</li>
@@ -190,7 +190,7 @@
                     <li>Служба технической поддержки 24/7.</li>
                     <li>Полное сопровождение в открытии франшизы.</li>
                 </ul>
-                <div class="box investment"><a name="05"></a>
+                <div class="box investment"><a class="anchor-title" name="05"></a>
                     <div class="subtitle is-size-4">Инвестиции для открытия бизнеса</div>
                     <p class="has-text-justified mb-3"><b>Стартовые инвестиции:</b> от 300 000 рублей (без учета паушального взноса)</p>
                     <p class="has-text-justified mb-3"><b>Срок окупаемости:</b> от 12 месяцев</p>
@@ -213,24 +213,24 @@
                     </ul>
                 </div>
 
-                <div class="box has-background-light"><a name="06"></a>
+                <div class="box has-background-light"><a class="anchor-title" name="06"></a>
                     <div class="subtitle is-size-4">Отзывы моих франчайзи</div>
                 </div>
 
-                <div class="subtitle is-size-3"><a name="07"></a>Пакет франшизы</div>
+                <div class="subtitle is-size-3"><a class="anchor-title" name="07"></a>Пакет франшизы</div>
                 <p class="has-text-justified mb-3">Стартовый пакет франшизы включает всё, чтобы начать работать и иметь стабильный поток клиентов: обучение, инструкции и маркетинговую поддержку от головного офиса.</p>
                 <ol>
                     <li>Рекламное агентство — франчайзи продает полиграфию, производство на аутсосрсинге.</li>
                     <li>Производство — франчайзи продает полиграфию и производит ее на собственном оборудовании.</li>
                 </ol>
 
-                <div class="box has-background-light"><a name="08"></a>
+                <div class="box has-background-light"><a class="anchor-title" name="08"></a>
                     <div class="subtitle has-text-centered is-size-4">Фото</div>
                     <div class="subtitle has-text-centered is-size-4 mt-6">Видео</div>
                 </div>
 
                 <div class="box investment">
-                    <div class="subtitle is-size-4"><a name="09"></a>Расчет прибыли</div>
+                    <div class="subtitle is-size-4"><a class="anchor-title" name="09"></a>Расчет прибыли</div>
                     <p class="has-text-justified mb-3"><b>Средний чек:</b> от 3 500 до 4 000 рублей</p>
                     <p class="has-text-justified mb-3"><b>Средний оборот в месяц:</b> 1 000 000 рублей</p>
                     <p class="has-text-justified mb-3"><b>Затраты в месяц:</b> 850 000 рублей</p>
@@ -238,7 +238,7 @@
                     <p class="has-text-justified mb-3"><b>Окупаемость:</b> от 4 месяцев</p>
                 </div>
 
-                <div class="box has-background-light"><a name="10"></a>
+                <div class="box has-background-light"><a class="anchor-title" name="10"></a>
                     <div class="subtitle has-text-centered is-size-3">Отзывы о франшизе «Printing»</div>
                     <div class="has-text-centered">Поделитесь своим мнением о франшизе!</div>
                     <div class="has-text-centered mt-4"><button class="button">Оставить отзыв</button></div>
@@ -272,17 +272,17 @@
                 <div class="is-sticky">
                     <div class="box has-background-light">
                         <div class="subtitle is-size-4">Содержание страницы</div>
-                        <div class="mt-2"><a class="has-text-black" href="#01">О компании и бизнесе</a></div>
-                        <div class="mt-2"><a class="has-text-black" href="#02">Описание франшизы</a></div>
-                        <div class="mt-2 pl-4"><a class="has-text-black" href="#03">- Как вы будете зарабатывать?</a></div>
-                        <div class="mt-2 pl-4"><a class="has-text-black" href="#04">- Преимущества франшизы</a></div>
-                        <div class="mt-2 pl-4"><a class="has-text-black" href="#05">- Стоимость франшизы</a></div>
-                        <div class="mt-2 pl-4"><a class="has-text-black" href="#06">- Видеоотзывы</a></div>
-                        <div class="mt-2 pl-4"><a class="has-text-black" href="#07">- Пакет франшизы</a></div>
-                        <div class="mt-2 pl-4"><a class="has-text-black" href="#08">- Фото и видео</a></div>
-                        <div class="mt-2 pl-4"><a class="has-text-black" href="#09">- Расчет прибыли</a></div>
-                        <div class="mt-2"><a class="has-text-black" href="#10">Отзывы франчайзи</a></div>
-                        <div class="mt-2"><a class="has-text-black" href="">Подробный бизнес-план</a></div>
+                        <div class="mt-2"><a class="has-text-black menu-item" href="#01">О компании и бизнесе</a></div>
+                        <div class="mt-2"><a class="has-text-black menu-item" href="#02">Описание франшизы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#03">- Как вы будете зарабатывать?</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#04">- Преимущества франшизы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#05">- Стоимость франшизы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#06">- Видеоотзывы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#07">- Пакет франшизы</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#08">- Фото и видео</a></div>
+                        <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#09">- Расчет прибыли</a></div>
+                        <div class="mt-2"><a class="has-text-black menu-item" href="#10">Отзывы франчайзи</a></div>
+                        <div class="mt-2"><a class="has-text-black send-order">Подробный бизнес-план</a></div>
                     </div>
 
                     <div class="box">
@@ -297,7 +297,7 @@
                             <p class="title is-6 has-text-weight-bold">Арсений Девдариани</p>
                             </div>
                         </div>
-                        <button class="button is-primary mt-1 is-fullwidth">
+                        <button class="button is-primary mt-1 is-fullwidth send-order">
                             <img src="img/envelope.svg" class="mr-2">
                             Отправить заявку
                         </button>
@@ -306,6 +306,17 @@
             </div>
         </div>
 
+    </div>
+    <div id="modal" class="modal">
+        <div class="modal-background mclose"></div>
+        <div class="modal-content">
+            <div class="card">
+                <div id="modal-message" class="card-content">
+
+                </div>
+            </div>
+        </div>
+        <button id="modal-close" class="modal-close is-large mclose" aria-label="close"></button>
     </div>    
 </body>
 </html>
