--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src=js/jquery-3.6.1.min.js defer></script>
     <script src=js/owl.carousel.min.js defer></script>
-    <script src=js/script.js?<?=time()?> defer></script>
+    <script src=js/script.js defer></script>
 
 </head>
 <body>
