Put Arseniy's fix

--- a/index.html
+++ b/index.html
@@ -216,9 +216,11 @@
 
                 <div class="box has-background-light"><a class="anchor-title" name="06"></a>
                     <div class="subtitle is-size-4">Отзывы моих франчайзи</div>
-                    <div class="column has-text-centered">
-                        <div id='carousel-video' class="owl-carousel owl-loaded owl-theme">
+                    <div class="columns">
+                        <div class="column is-6">
                             <iframe class="video-frame" src="https://www.youtube.com/embed/GeNQ_qFivY4" title="Отзыв Сергей Корнух" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="column is-6">
                             <iframe class="video-frame" src="https://www.youtube.com/embed/MEyG0wcM0A0" title="Отзыв Павел Игнатенко" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -267,12 +269,6 @@
                     <p class="has-text-justified mb-3"><b>Окупаемость:</b> от 4 месяцев</p>
                 </div>
 
-                <div class="box has-background-light"><a class="anchor-title" name="10"></a>
-                    <div class="subtitle has-text-centered is-size-3">Отзывы о франшизе «Printing»</div>
-                    <div class="has-text-centered">Поделитесь своим мнением о франшизе!</div>
-                    <div class="has-text-centered mt-4"><button id="button-feedback" class="button">Оставить отзыв</button></div>
-                </div>
-
             </div>
             <div class="column is-3">
                 <div class="box in-digits p-2">
@@ -310,7 +306,6 @@
                         <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#07">- Пакет франшизы</a></div>
                         <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#08">- Фото и видео</a></div>
                         <div class="mt-2 pl-4"><a class="has-text-black menu-item" href="#09">- Расчет прибыли</a></div>
-                        <div class="mt-2"><a class="has-text-black menu-item" href="#10">Отзывы франчайзи</a></div>
                         <div class="mt-2"><a class="has-text-black form-show">Подробный бизнес-план</a></div>
                     </div>
 
@@ -357,41 +352,6 @@
                         Отправить заявку
                     </button>
                     <div class="text">Ваши данные в полной безопасности и будут переданы только представителям франшизы. Отправляя заявку, вы даёте своё согласие  на обработку персональных данных.</div>
-                </form>
-            </div>
-        </div>
-        <button id="modal-close" class="modal-close is-large mclose" aria-label="close"></button>
-    </div>
-
-    <div id="modal-feedback" class="modal">
-        <div class="modal-background mclose"></div>
-        <div class="modal-content">
-            <div class="card">
-                <form id="feedback-form" class="card-content" enctype="multipart/form-data" action="">
-                    <div class="subtitle is-size-3 has-text-centered">Отзыв по франшизе</div>
-                    <div class="subtitle is-size-6 has-text-centered">Ваш отзыв будет опубликован на сайте только после прохождения модерации</div>
-                    <div id="sending-error-feedback" class="has-text-danger is-size-7 is-hidden">Ошибка отправки отзыва. Попробуйте ещё раз.</div>
-                    <textarea name="comment" class="textarea mt-4" cols="30" rows="3" placeholder="Отзыв" required></textarea>
-                    <div id="no-comment-feedback" class="has-text-danger is-size-7 is-hidden">Напишите, пожалуйста, отзыв.</div>
-                    <input name="name" type="text" class="input mt-4" placeholder="Имя" required>
-                    <div id="no-name-feedback" class="has-text-danger is-size-7 is-hidden">Заполните, пожалуйста, имя.</div>
-                    <input name="city" type="text" class="input mt-4" placeholder="Город" required>
-                    <div id="no-city-feedback" class="has-text-danger is-size-7 is-hidden">Заполните, пожалуйста, город.</div>
-                    <input name="email" type="e-mail" class="input mt-4" placeholder="E-mail" required>
-                    <div id="no-email-feedback" class="has-text-danger is-size-7 is-hidden">Заполните, пожалуйста, e-mail.</div>
-                    <input name="phone" type="tel" class="input mt-4" placeholder="Телефон" required>
-                    <div id="no-phone-feedback" class="has-text-danger is-size-7 is-hidden">Заполните, пожалуйста, телефон.</div>
-                    <input name="address" type="text" class="input mt-4" placeholder="Адрес торговой точки" required>
-                    <div id="no-address-feedback" class="has-text-danger is-size-7 is-hidden">Заполните, пожалуйста, адрес.</div>
-                    <input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
-                    <input name="photo" type="file" class="input mt-4" required>
-                    <div class="text">Фото в формате JPG, PNG, BMP размером файла не более 1 Мбайт</div>
-                    <div id="no-photo-feedback" class="has-text-danger is-size-7 is-hidden">Загрузите, пожалуйста, фото.</div>
-                    <button id="send-feedback" type='submit' class="button is-primary mt-4 is-fullwidth">
-                        <img src="img/envelope.svg" class="mr-2">
-                        Отправить отзыв
-                    </button>
-                    <div class="text is-size-7">Отправляя отзыв, вы даёте своё согласие на обработку персональных данных и соглашаетесь с правилами предоставления услуг.</div>
                 </form>
             </div>
         </div>
