Add links to main site

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <nav class="navbar is-navbar-sticky has-background-light desktop-only">
             <div class="navbar-brand ml-2">
-                <a class="navbar-item" href="https://printing.ru/static/franchise/index.html">
+                <a class="navbar-item" href="https://printing.ru">
                     <span class="navbar-title is-size-3 has-text-weight-semibold ml-3 is-uppercase">«Printing» – франшиза рекламного агентства</span>    
                 </a>                
             </div>
@@ -27,11 +27,15 @@
 
         <div class="columns mt-4">
             <div class="column is-9">
-                <p class="has-text-centered"><img src="img/top-banner.jpg" alt="«Printing» — франшиза рекламного агентства" title="«Printing» — франшиза рекламного агентства"></p>
+                <a href="https://printing.ru">
+                    <p class="has-text-centered"><img src="img/top-banner.jpg" alt="«Printing» — франшиза рекламного агентства" title="«Printing» — франшиза рекламного агентства"></p>
+                </a>
             </div>
             <div class="column is-3">
                 <p class="has-text-centered">
-                    <img class="mb-6" src="img/logo.svg" width="75%">
+                    <a href="https://printing.ru">
+                        <img class="mb-6" src="img/logo.svg" width="75%">
+                    </a>
                 </p>
                 <div class="columns">
                     <div class="column is-6 has-text-centered">
