Fix second envelope

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                             </div>
                         </div>
                         <button class="button is-primary mt-1 is-fullwidth form-show">
-                            <img src="img/envelope.svg" class="mr-2">
+                            <img src="img/envelope.png" class="mr-2" width="20" height="16">
                             Отправить заявку
                         </button>
                     </div>
